--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Bitter:wght@200;300;400;500;600;700;800;900&family=Dosis:wght@200;300;400;500;600;700;800&family=Figtree:wght@300;400;500;600;700;800&family=Mulish:wght@200;300;400;500;600;700;800;900&family=Nunito+Sans:wght@200;300;400;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Multicalendario</title>
+    <title>Josenanodev React Components Library</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
